Added Basic Settings Page to Renderer

--- a/web-scraping-electron-app/renderer/components/settings.html
+++ b/web-scraping-electron-app/renderer/components/settings.html
@@ -1,5 +1,6 @@
 
-
+<!-- HTML component used for the settings page in the application. -->
+<div id="settings-container" class="my-5 container" style="display: none;">
 <form>
 	<fieldset>
 		<legend>Search History</legend>
@@ -72,3 +73,4 @@
 
 	</fieldset>
 </form>
+</div>
