Settings Menu fixed
Next step will be to add functionality

--- a/web-scraping-electron-app/renderer/components/settings.html
+++ b/web-scraping-electron-app/renderer/components/settings.html
@@ -1,11 +1,8 @@
 
 <!-- HTML component used for the settings page in the application. -->
-<!-- re add the style="display: none;"-->
-<div id="settings-container" class="my-5 container" ><!--style="display: none;">-->
+<div id="settings-container" class="my-5 container" style="display: none;">
+	<h1 class="display-4">Settings</h1>
 <form>
-	<fieldset>
-		<legend id="settingsHeading">Settings</legend>
-	</fieldset>
 	<fieldset>
 		<legend>Search History</legend>
 
@@ -30,7 +27,7 @@
 		</fieldset>
 	</fieldset>
 	
-	<fieldset>
+	<fieldset id="windowDimensions">
 		<legend>Window Dimensions</legend>
 
 		<fieldset>
