Added some client side validation

--- a/web-scraping-electron-app/renderer/components/settings.html
+++ b/web-scraping-electron-app/renderer/components/settings.html
@@ -10,7 +10,7 @@
 			<ul>
 				<li>
 					<label for="viewLast">View Last: </label>
-					<input type="text" id="viewLast" />
+					<input type="number" min="1" max="50" id="viewLast" />
 				</li>
 				<li>
 					<select name="searchHistory" onclick="">
@@ -34,11 +34,11 @@
 			<ul>
 				<li>
 					<label for="width">Width: </label>
-					<input type="text" id="width" />
+					<input type="number" min="200" max="2000" id="width" />
 				</li>
 				<li>
 					<label for="height">Height: </label>
-					<input type="text" id="height" />
+					<input type="number" min="200" max="2000" id="height" />
 				</li>
 			</ul>
 			
