Starting to hook the theme changing
Not functional yet

--- a/web-scraping-electron-app/renderer/components/settings.html
+++ b/web-scraping-electron-app/renderer/components/settings.html
@@ -66,10 +66,11 @@
 		<legend>Color Modes</legend>
 
 		<fieldset>
-			<select name="colorModes" onclick="">
-				<option value="light">Light</option>
-				<option value="dark">Dark</option>
-				<option value="disco">Disco</option>
+			<select name="colorModes" id="theme-select">
+				<option value="light-theme">Light Theme</option>
+                <option value="dark-theme">Dark Theme</option>
+                <option value="blue-theme">Blue Theme</option>
+                <option value="disco-theme">Disco Theme</option>
 
 			</select>
 		</fieldset>
