Attempting to log search history

--- a/web-scraping-electron-app/renderer/components/settings.html
+++ b/web-scraping-electron-app/renderer/components/settings.html
@@ -13,7 +13,7 @@
 					<input type="number" min="1" max="50" id="viewLast" />
 				</li>
 				<li>
-					<select name="searchHistory" onclick="">
+					<select name="searchHistory" id="searchHistory">
 						<option value="Option1">Option1</option>
 						<option value="Option2">Option2</option>
 
