Tie video page to embedded tutorial.

--- a/web-scraping-electron-app/renderer/components/home.html
+++ b/web-scraping-electron-app/renderer/components/home.html
@@ -32,3 +32,7 @@
     <h1 class="display-4">Home</h1>
     <p>Welcome to our modern, elegant web scraping application!</p>
 </div>
+
+<iframe src="web-scraping-electron-app/renderer/components/tutorial.html" height="400" width = "600" style="display: none; text-align: center" id="embed-tutorial">
+    Video tutorial iframe failed to load.
+</iframe>
