--- a/web-scraping-electron-app/renderer/components/tutorial.html
+++ b/web-scraping-electron-app/renderer/components/tutorial.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <title>Tutorial page</title>
 </head>
-<body>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/rKpDempGO0g?si=KIuxWCRsVzt3zj3l">
+<body style="background-color: #1e1e1e">
+    <iframe width="560" height="320" src="https://www.youtube.com/embed/rKpDempGO0g?si=KIuxWCRsVzt3zj3l">
         Failed to load video iframe.
     </iframe>
 </body>
