--- a/web-scraping-electron-app/webviews/templates/scrape-window.html
+++ b/web-scraping-electron-app/webviews/templates/scrape-window.html
@@ -14,11 +14,11 @@
     ">
     <!-- CSS Stylesheets -->
     <link rel="stylesheet" href="../../node_modules/bootstrap/dist/css/bootstrap.css">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../../frontend/css/style.css">
     <!-- jQuery -->
     <script src="../../node_modules/jquery/dist/jquery.js"></script>
     <!-- Include renderer.js -->
-    <script src="./js/scrape-webview-renderer.js"></script>
+    <script src="../scraping/scrape-webview-renderer.js"></script>
 </head>
 <body>
     <nav class="navbar navbar-expand-sm navbar-dark fixed-top draggable">
