--- a/web-scraping-electron-app/renderer/components/annotation.html
+++ b/web-scraping-electron-app/renderer/components/annotation.html
@@ -18,7 +18,7 @@
                 id="annotation-webview" 
                 src="">
             </webview>
-            <!--A button for openning the LS app in an external window-->
+            <!--A button for opening the LS app in an external window-->
             <svg 
                 class="position-absolute bottom-0 end-0" 
                 id="ext-win-btn" 
