Update to offer new design and some minor fixes.

--- a/web-scraping-electron-app/renderer/components/annotation.html
+++ b/web-scraping-electron-app/renderer/components/annotation.html
@@ -7,7 +7,7 @@
             <div id="ls-form" class="form-group my-4">
                 <label for="ls-link-input" class="form-label">URL of Label Studio Project</label>
                 <div class="input-group mb-3">
-                    <input type="text" class="form-control" id="ls-link-input" placeholder="Enter the URL to the Label Studio Project">
+                    <input type="text" class="bg-primary-subtle form-control" id="ls-link-input" placeholder="Enter the URL to the Label Studio Project">
                     <button class="btn btn-outline-secondary" type="button" id="submitLSURLBtn">Submit</button>
                 </div>
             </div>
