--- a/web-scraping-electron-app/renderer/components/database.html
+++ b/web-scraping-electron-app/renderer/components/database.html
@@ -1,7 +1,7 @@
 <!-- HTML component used for the database page in the application. -->
 <div id="database-container" class="my-5 container" style="display: none;">
     <h1 class="display-4">Database Information</h1>
-    <pre id="website-info" class="bg-dark text-white p-3 rounded" style="max-height: 400px; overflow-y: auto;">
+    <pre id="website-info" class="bg-primary-subtle text-white p-3 rounded" style="max-height: 400px; overflow-y: auto;">
         <!-- website information will be added here -->
     </pre>
 </div>
