--- a/web-scraping-electron-app/renderer/components/scrape.html
+++ b/web-scraping-electron-app/renderer/components/scrape.html
@@ -35,7 +35,7 @@
                 <div class="mb-3">
                     <label for="url-input" class="form-label">URL of Web Page</label>
                     <div class="input-group mb-3">
-                        <input id="url-input" type="text" class="form-control" placeholder="Enter the URL here" aria-label="URL">
+                        <input id="url-input" type="text" class="bg-primary-subtle form-control" placeholder="Enter the URL here" aria-label="URL">
                         <button class="btn btn-outline-secondary" type="button" id="submitURLBtn">Submit</button>
                     </div>
                 </div>
@@ -83,7 +83,7 @@
                 <div class="exp-lbl-container">
                     <span id="man-exp-btn-lbl">Export To</span>
                 </div>
-                <select id="projectSelect-man" class="form-control">
+                <select id="projectSelect-man" class="bg-primary-subtle form-control">
                     <option selected></option>
                     <!--Options will be dynamically added-->
                 </select>
@@ -91,7 +91,7 @@
 
             <div class="form-group mb-3">
                 <label for="manual-scrape-textarea">Manual Data Entry Field</label>
-                <textarea class="form-control" id="manual-scrape-textarea" rows="3"></textarea>
+                <textarea class="bg-primary-subtle form-control" id="manual-scrape-textarea" rows="3"></textarea>
             </div>
         
             <button class="btn btn-outline-secondary" type="button" id="man-exportBtn">Export</button>
