--- a/web-scraping-electron-app/renderer/components/home.html
+++ b/web-scraping-electron-app/renderer/components/home.html
@@ -7,7 +7,7 @@
         <span class="badge" id="number-of-notifications">3</span>
     </button>
 
-    <select id="notification-box" style="visibility: hidden; float:right; background-color: white; color: black" class="bg-light notification"></select>
+    <select id="notification-box" style="visibility: hidden; float:right" class="notification"></select>
 
     <button class="notification" id="notification-x-button">
         <span class="badge">x</span>
