--- a/web-scraping-electron-app/renderer/components/tutorial.html
+++ b/web-scraping-electron-app/renderer/components/tutorial.html
@@ -5,7 +5,7 @@
     <title>Tutorial page</title>
 </head>
 <body style="background-color: #1e1e1e">
-    <iframe width="560" height="320" src="https://www.youtube.com/embed/rKpDempGO0g?si=KIuxWCRsVzt3zj3l">
+    <iframe width="560" height="320" src="https://www.youtube.com/embed/rKpDempGO0g?si=KIuxWCRsVzt3zj3l?autoplay=0&showinfo=0&controls=0&autohide=1">
         Failed to load video iframe.
     </iframe>
 </body>
