worked through path issues and updated J-Initiative-Web-Scraper/README.md

--- a/web-scraping-electron-app/src/electron/webviews/templates/scrape-window.html
+++ b/web-scraping-electron-app/src/electron/webviews/templates/scrape-window.html
@@ -13,10 +13,10 @@
         style-src 'self' 'unsafe-inline';
     ">
     <!-- CSS Stylesheets -->
-    <link rel="stylesheet" href="../../node_modules/bootstrap/dist/css/bootstrap.css">
-    <link rel="stylesheet" href="../../frontend/css/style.css">
+    <link rel="stylesheet" href="../../../../node_modules/bootstrap/dist/css/bootstrap.css">
+    <link rel="stylesheet" href="../../../frontend/css/style.css">
     <!-- jQuery -->
-    <script src="../../node_modules/jquery/dist/jquery.js"></script>
+    <script src="../../../../node_modules/jquery/dist/jquery.js"></script>
     <!-- Include renderer.js -->
     <script src="../scraping/scrape-webview-renderer.js"></script>
 </head>
@@ -129,7 +129,7 @@
         </div>
     </div>
     <!-- Bootstrap JS Bundle -->
-    <script src="../../node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
+    <script src="../../../../node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
     
 </body>
 </html>
