--- a/web-scraping-electron-app/renderer/components/database.html
+++ b/web-scraping-electron-app/renderer/components/database.html
@@ -1,7 +1,22 @@
 <!-- HTML component used for the database page in the application. -->
+<style>
+    table {
+        font-family: arial, sans-serif;
+        border-collapse: collapse;
+        width: 100%;
+    }
+
+    td, th {
+        border: 1px solid #dddddd;
+        text-align: left;
+        padding: 8px;
+    }
+
+
+</style>
 <div id="database-container" class="my-5 container" style="display: none;">
     <h1 class="display-4">Database Information</h1>
-    <pre id="website-info" class="bg-dark text-white p-3 rounded" style="max-height: 400px; overflow-y: auto;">
+    <pre id="website-info" class="bg-dark text-white p-3 rounded" style="max-height: 400px; overflow-y: visible;">
         <!-- website information will be added here -->
     </pre>
 </div>
