found path issue with scrape-webview-preload.js

--- a/web-scraping-electron-app/src/electron/webviews/templates/scrape-window.html
+++ b/web-scraping-electron-app/src/electron/webviews/templates/scrape-window.html
@@ -59,7 +59,7 @@
     <div id="content-container">
         <div id="webview-outer-container">
             <div id="webview-container">
-                <webview id="webview-element" preload="./js/scrape-webview-preload.js"></webview>
+                <webview id="webview-element" preload="../scraping/scrape-webview-preload.js"></webview>
                 <div id="webview-overlay"></div>
             </div>
         </div>
