Begin working towards an alternative for iFrame elements.

--- a/web-scraping-electron-app/src/frontend/components/templates/home.html
+++ b/web-scraping-electron-app/src/frontend/components/templates/home.html
@@ -35,7 +35,7 @@
 
 <div id="embed-tutorial" style="display: none; position: relative">
     <button style="position: absolute; height: 30px; left: 2px; padding: 2px 4px; font-weight: bold; background-color: brown" id="tutorial-x-button">X</button>
-    <iframe src="./components/tutorial.html" height="350" width="600" style="text-align: center">
+    <!-- <iframe src="./tutorial.html" height="350" width="600" style="text-align: center">
         Video tutorial iframe failed to load.
-    </iframe>
+    </iframe> TO BE REMOVED ON SUCCESSFUL COMPLETION -->
 </div>
