Change home-page.js to improve tutorial functionalities.

--- a/web-scraping-electron-app/src/frontend/components/templates/home.html
+++ b/web-scraping-electron-app/src/frontend/components/templates/home.html
@@ -33,9 +33,10 @@
     <p>Welcome to our modern, elegant web scraping application!</p>
 </div>
 
-<div id="embed-tutorial" style="display: none; position: relative">
+<div id="tutorial-content" style="display: none; position: relative">
     <button style="position: absolute; height: 30px; left: 2px; padding: 2px 4px; font-weight: bold; background-color: brown" id="tutorial-x-button">X</button>
-    <!-- <iframe src="./tutorial.html" height="350" width="600" style="text-align: center">
-        Video tutorial iframe failed to load.
-    </iframe> TO BE REMOVED ON SUCCESSFUL COMPLETION -->
+
+    <div id="embed-tutorial">
+        <!-- Where tutorial is embedded -->
+    </div>
 </div>
