--- a/web-scraping-electron-app/renderer/components/database.html
+++ b/web-scraping-electron-app/renderer/components/database.html
@@ -16,7 +16,7 @@
 </style>
 <div id="database-container" class="my-5 container" style="display: none;">
     <h1 class="display-4">Database Information</h1>
-    <pre id="website-info" class="bg-dark text-white p-3 rounded" style="max-height: 400px; overflow-y: visible;">
+    <pre id="website-info" class="bg-dark text-white p-3 rounded" style="white-space: pre-wrap; overflow: hidden;">
         <!-- website information will be added here -->
     </pre>
 </div>
