Remove iFrames, requires file instead of link.

--- a/web-scraping-electron-app/src/frontend/components/templates/home.html
+++ b/web-scraping-electron-app/src/frontend/components/templates/home.html
@@ -33,10 +33,10 @@
     <p>Welcome to our modern, elegant web scraping application!</p>
 </div>
 
-<div id="tutorial-content" style="display: none; position: relative">
-    <button style="position: absolute; height: 30px; left: 2px; padding: 2px 4px; font-weight: bold; background-color: brown" id="tutorial-x-button">X</button>
-
+<div id="tutorial-content" style="display: none; position: relative; width: 580px">
     <div id="embed-tutorial">
         <!-- Where tutorial is embedded -->
     </div>
+
+    <p id="tutorial-x-button" style="float: right; cursor: pointer; font-weight: bold; position: relative; color: #007bff; text-shadow: -1px 0 2px cyan">Close tutorial</p>
 </div>
