--- a/web-scraping-electron-app/src/frontend/components/templates/tutorial.html
+++ b/web-scraping-electron-app/src/frontend/components/templates/tutorial.html
@@ -5,8 +5,9 @@
     <title>Tutorial page</title>
 </head>
 <body style="background-color: #1e1e1e">
-    <iframe width="560" height="320" src="https://www.youtube.com/embed/rKpDempGO0g?si=KIuxWCRsVzt3zj3l?autoplay=0&showinfo=0&controls=0&autohide=1">
-        Failed to load video iframe.
-    </iframe>
+    <video id="tutorial-video-player" width="560" height="320" controls>
+        <source src="../../docs/JInitiative Scraper Tutorial.mp4" type="video/mp4">
+        Failed to load tutorial video.
+    </video>
 </body>
 </html>
