Add ability to reenable tutorial.

--- a/web-scraping-electron-app/src/frontend/components/templates/about.html
+++ b/web-scraping-electron-app/src/frontend/components/templates/about.html
@@ -4,4 +4,7 @@
     <p>Node.js Version: <span id="node-version"></span></p>
     <p>Chromium Version: <span id="chrome-version"></span></p>
     <p>Electron Version: <span id="electron-version"></span></p>
+
+    <pre></pre>
+    <button id="enable-tutorial" style="background-color: darkslategrey">Enable tutorial</button>
 </div>
