--- a/web-scraping-electron-app/src/frontend/components/templates/database.html
+++ b/web-scraping-electron-app/src/frontend/components/templates/database.html
@@ -1,5 +1,11 @@
 <!-- HTML component used for the database page in the application. -->
 <style>
+    #database-container {
+        max-width: 1200px;
+        margin: 0 auto;
+        width: 100%;
+    }
+
     table {
         font-family: arial, sans-serif;
         border-collapse: collapse;
